--- a/templates/explore.html
+++ b/templates/explore.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends  "base.html" %}
 {% block title %}发现页{% end %}
-{% block content %}
-explore content <br>
-{% for num in range(1,5) %}
-<img src="{{ static_url('images/{}.jpg'.format(num)) }}" width="200px"/>
-<br>
+{% block content %} explore content <br>
+
+{% for url in urls %}
+
+    <img src="{{ static_url(url) }}" />
 {% end %}
+
 {% end %}
