--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}首页{% end %}
 {% block content %}
-首页 content current_user:{{ current_user}} <br>
-{% for num in range(1,5) %}
-<a href="/post/{{ num }}">
-<img src="{{ static_url('images/{}.jpg'.format( num )) }}" width="500px"/></a>
-{% end %}
+首页 content  <br>
+    {% for p in posts %}
+    <a href="/post/{{ p.id }}"><img src="/{{ p.image_url }}" width="500px"/></a>
+    {% end %}
 {% end %}
