--- a/templates/post.html
+++ b/templates/post.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}详情页{% end %}
 {% block content %}
-post of {{ post_id }} content  <br>
+post of {{ post.id }} content  <br>
 
-<img src="{{ static_url('images/{}.jpg'.format(post_id)) }}" width="500px"/>
-<br>
+<img src="/{{ post.image_url }}" />
 
 {% end %}
