--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Tornado Title{% end %}</title>
+    <!-- Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="{{ static_url('css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ static_url('font-awesome-4.7.0/css/font-awesome.min.css') }}">
 
 </head>
 <body>
-<a href="/explore">发现</a> <a href="/">首页</a> <a href="/upload">上传</a> current_user:{{ current_user}} <a href="/logout">登出</a>
+<div class="container">
+    <div class="row">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="/"><i class="fa fa-camera"></i>Tudo 图片</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="/">首页 <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/explore">发现</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-cogs"></i> 用户中心
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">个人信息</a>
+                  <a class="dropdown-item" href="#">收藏</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">帮助</a>
+                </div>
+              </li>
+                <li class="nav-item">
+
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="/logout">{{ current_user }}登出</a>
+              </li>
+            </ul>
+              <a class="btn btn-info my-2 my-sm-o" href="/upload"><i class="fa fa-upload"></i> 上传</a>
+
+          </div>
+        </nav>
+  </div>
+</div>
 {% block content %}Default body of base{% end %}
+
+
+<!-- jQuery文件 -->
+<script src="{{ static_url('js/jquery-3.3.1.slim.min.js') }}"></script>
+<!-- Popper文件 -->
+<script src="{{ static_url('js/popper.min.js') }}"></script>
+<!-- Bootstrap 核心 JavaScript 文件 -->
+<script src="{{ static_url('js/bootstrap.js') }}"></script>
 </body>
 </html>
