--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/explore">发现</a>
               </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/room">Room</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="fa fa-cogs"></i> 用户中心
